plugins {
    id 'application'
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    maven { url = uri(System.getenv('ZLINK_LOCAL_MAVEN_REPOSITORY')) }
    mavenCentral()
}

dependencies {
    implementation 'systems.zlink:zlink:@BINDING_VERSION@'
}

application {
    mainClass = 'consumer.PublicConsumer'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}
